crates/kraai-toon-schema/tests/compile_fail/missing_nested_field.stderr
error: example is missing required field `value`
  --> tests/compile_fail/missing_nested_field.rs:3:1
   |
 3 | / toon_tool! {
 4 | |     name: "missing_nested_field",
 5 | |     types: {
 6 | |         #[derive(serde::Deserialize, serde::Serialize)]
...  |
20 | | }
   | |_^
   |
   = note: this error originates in the macro `toon_tool` (in Nightly builds, run with -Z macro-backtrace for more info)
